--- a/styles/main.css
+++ b/styles/main.css
@@ -14,6 +14,10 @@ span {
     color: #999999;
 }
 
+h2 {
+    font-size: 40px;
+    font-weight: 700;
+}
 /* style for header */
 .banner {
     max-width: 1140px;
@@ -63,10 +67,10 @@ main {
     width: 50%;
     padding-left: 90px;
 }
-.failures-info h2 {
+/* .failures-info h2 {
     font-size: 40px;
     font-weight: 700;
-}
+} */
 .failures-info p {
     width: 400px;
 }
@@ -84,9 +88,7 @@ main {
 .plans {
     margin-top: 130px;
 }
-.plans h1 {
-    font-size: 40px;
-    font-weight: 700;
+.plans h2 {
     text-align: center;
 }
 .plan-cart-container {
@@ -106,4 +108,28 @@ main {
 .plan-cart span {
     font-size: 20px;
     font-weight: 500;
+}
+
+/* style for positive mindset */
+.positive-mindset {
+    margin-top: 130px;
+    padding: 59px 64px;
+    background-image: url(../images/gradient2.png), url(../images/watch.png);
+    border-radius: 8px;
+}
+.positive-mindset h2 {
+    color: #ffffff;
+}
+
+.positive-mindset button {
+    padding: 20px 36px;
+    font-size: 20px;
+    font-weight: 600;
+    color: #ff7200;
+    border: none;
+    border-radius: 5px;
+}
+.positive-mindset button:hover {
+    background-color: #ffc392;
+    color: #ffffff;
 }
