--- a/styles/main.css
+++ b/styles/main.css
@@ -133,6 +133,31 @@ main {
     color: #ffffff;
 }
 
+/* style for portfolio */
+.portfolio {
+    margin-top: 130px;
+}
+.portfolio h2 {
+    text-align: center;
+}
+.portfolio p {
+    text-align: center;
+}
+.portfolio-container {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+}
+.portfolio-cart {
+    width: 33%;
+    height: 500px;
+}
+.portfolio-cart img {
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+}
+
 /* style for footer */
 footer {
     background-color: #151414;
